# FAST-WSI-pipeline-and-gui

./: .gitignore  CMakeLists.txt  GUI.cpp  GUI.hpp  README.md  main.cpp  wsi_patch_segmentation.fpl
pipelines/: CD3_UNET_256.fpl  bach-pw-classification-mobilenetv2.fpl  nuclei_seg_stream_wsi.fpl  object_detection_nuclei_tiny_yolo_v3.fpl  tissue_segmentation.fpl  wsi_p2.fpl  wsi_patch_segmentation.fpl
